--- a/src/DShop.Common/DShop.Common.csproj
+++ b/src/DShop.Common/DShop.Common.csproj
@@ -30,6 +30,7 @@
     <PackageReference Include="RawRabbit.DependencyInjection.Autofac" Version="2.0.0-rc3" />
     <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc3" />
     <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc3" />
+    <PackageReference Include="RestEase" Version="1.4.4" />
     <PackageReference Include="Serilog" Version="2.5.0" />
     <PackageReference Include="Serilog.Extensions.Logging" Version="2.0.2" />
     <PackageReference Include="Serilog.Sinks.Console" Version="3.1.0" />
