--- a/MyGet.config
+++ b/MyGet.config
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <packageSources>
-    <add key="DShop" value="https://www.myget.org/F/dnc-dshop/api/v3/index.json" />
+    <add key="MyGet" value="https://www.myget.org/F/dnc-dshop/api/v3/index.json" />
   </packageSources>
 </configuration>
