--- a/src/DShop.Common/DShop.Common.csproj
+++ b/src/DShop.Common/DShop.Common.csproj
@@ -3,9 +3,21 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="App.Metrics.Extensions.Mvc" Version="1.2.1" />
-    <PackageReference Include="App.Metrics.Extensions.Reporting.InfluxDB" Version="1.2.0" />
-    <PackageReference Include="App.Metrics.Formatters.Json" Version="2.1.0" />
+    <!-- <PackageReference Include="App.Metrics" Version="2.1.0" /> -->
+    <!-- <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Health" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="2.0.0" /> -->
+    <PackageReference Include="App.Metrics.AspNetCore" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Health" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Health.Endpoints" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Reporting" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.Extensions.Configuration" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.Reporting.Console" Version="2.0.0" />
+    <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="2.0.0" />
+    <!-- <PackageReference Include="App.Metrics.Extensions.Mvc" Version="1.2.1" /> -->
+    <!-- <PackageReference Include="App.Metrics.Extensions.Reporting.InfluxDB" Version="1.2.0" /> -->
+    <!-- <PackageReference Include="App.Metrics.Formatters.Json" Version="2.1.0" /> -->
     <PackageReference Include="Autofac" Version="4.6.2" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.0" />
     <PackageReference Include="Lockbox.Client" Version="2.0.2" />
