--- a/.travis.yml
+++ b/.travis.yml
@@ -10,9 +10,9 @@ branches:
 before_script:
   - chmod -R a+x scripts
 script:
-  - ./scripts/build.sh
+  - ./scripts/dotnet-build.sh
 after_success:
-  - ./scripts/pack.sh
+  - ./scripts/dotnet-pack.sh
 notifications:
   email:
     on_success: never
