--- a/src/DShop.Common/DShop.Common.csproj
+++ b/src/DShop.Common/DShop.Common.csproj
@@ -48,6 +48,7 @@
     <PackageReference Include="RawRabbit.Enrichers.MessageContext" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Enrichers.MessageContext.Subscribe" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.DependencyInjection.Autofac" Version="2.0.0-rc5" />
+    <PackageReference Include="RawRabbit.Enrichers.RetryLater" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Operations.Publish" Version="2.0.0-rc5" />
     <PackageReference Include="RawRabbit.Operations.Subscribe" Version="2.0.0-rc5" />
     <PackageReference Include="RestEase" Version="1.4.7" />
