AppMetrics update, cleaned up usings, packages updates

--- a/src/DShop.Common/DShop.Common.csproj
+++ b/src/DShop.Common/DShop.Common.csproj
@@ -1,4 +1,4 @@
-
+﻿
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -15,13 +15,24 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="App.Metrics.AspNetCore" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Core" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Endpoints" Version="3.0.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Health" Version="2.1.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Health.Endpoints" Version="2.1.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Hosting" Version="3.0.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Mvc" Version="3.0.0" />
     <PackageReference Include="App.Metrics.AspNetCore.Reporting" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Routing" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.AspNetCore.Tracking" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Core" Version="3.0.0" />
     <PackageReference Include="App.Metrics.Extensions.Configuration" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Extensions.DependencyInjection" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Formatters.InfluxDB" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Formatters.Json" Version="3.0.0" />
     <PackageReference Include="App.Metrics.Formatters.Prometheus" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Health.Checks.Http" Version="2.1.0" />
     <PackageReference Include="App.Metrics.Reporting.Console" Version="3.0.0" />
+    <PackageReference Include="App.Metrics.Reporting.Http" Version="3.0.0" />
     <PackageReference Include="App.Metrics.Reporting.InfluxDB" Version="3.0.0" />
     <PackageReference Include="Autofac" Version="4.8.1" />
     <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.1" />
